--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "hardhat test",
+		"start": "hardhat run scripts/run.js"
 	},
 	"keywords": [],
 	"author": "m5r",
