deploy contract to local network

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "hardhat test",
-		"start": "hardhat run scripts/run.js"
+		"start": "hardhat run scripts/run.js",
+		"deploy": "hardhat run scripts/run.js",
+		"network": "hardhat node"
 	},
 	"keywords": [],
 	"author": "m5r",
