--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ethers": "5.4.7",
+    "jotai": "^1.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
